--- a/docker/config.ini
+++ b/docker/config.ini
@@ -1,8 +1,8 @@
 [redacted]
 api_key = d7e43e7b.509ba4f15f40ae7f7b0867417bed55c3
 data_dirs = /downloads/Redacted,/downloads/fertilizer/linked-data/RED
-output_dir = /downloads/Redacted
-torrent_dir = /downloads/Redacted
+output_dir = /transcodes
+torrent_dir = /transcodes
 
 [orpheus]
 api_key = ""
