--- a/config.example
+++ b/config.example
@@ -1,10 +1,14 @@
-[redacted]
-username =
-password =
+[api_keys]
+redacted =
+orpheus =
+
+[directories]
 data_dir = /data
 output_dir = /output
 torrent_dir = /torrents
-24bit_behaviour = 0
-formats = flac, v0, 320
-piece_length = 18
-# media =
+
+[qbittorrent]
+host=
+port=
+username=
+password=
