--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -9,10 +9,11 @@ services:
       - /Users/matthew/PycharmProjects/redbetter/transcodes:/transcodes
     environment:
       TZ: 'Asia/Seoul'
+      PYTHONPATH: /app
     ports:
       - '9725:9725'
     command:
-      - /app/redbetter/main.py
+      - /app/main.py
       - --config
       - /config/config.ini
       - --cache
