--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -13,8 +13,7 @@ services:
     ports:
       - '9725:9725'
     command:
-      - /app/main.py
+      - /app/redbetter/main.py
       - --config
       - /config/config.ini
-      - --cache
-      - /config/cache
+
