--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ colorama
 mechanize==0.4.6
 mutagen>=1.20
 requests>=1.0
-flask~=3.1.0
+fastapi
+uvicorn
+httpx
+python-multipart
 qbittorrent-api
 flake8
 pytest
